Re-arrange the CSS a little. Added a very high z-index to the social toolbar. #jfbconnect-1304 Fixed

--- a/bootstrap/less/jquery-ui-autocomplete.less
+++ b/bootstrap/less/jquery-ui-autocomplete.less
@@ -132,6 +132,7 @@ Layout helpers
 }
 
 #autocomplete-fields .ui-autocomplete li.ui-state-focus {
+  background:none;
   background-color:#6d84b4;
   border-color:#3b5998;
 }
